# portfolio

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  index.html  tailwind.config.js
migrations/: 001_initial.sql
src/: api.rs  app.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src/components/: about.rs  certifications.rs  contact.rs  education.rs  experience.rs  hero.rs  mod.rs  nav.rs  projects.rs  shared.rs  skills.rs
src/pages/: admin.rs  home.rs  login.rs  mod.rs
src/pages/admin/: certifications.rs  education.rs  experience.rs  mod.rs  profile.rs  projects.rs  settings.rs  shared.rs  skills.rs
src/server/: auth.rs  db.rs  mod.rs  pdf.rs
style/: input.css
