[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
bin-target = "portfolio"
output-name = "portfolio"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3002"
reload-port = 3001
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]
leptos            = { version = "0.8" }
leptos_meta       = { version = "0.8" }
leptos_router     = { version = "0.8" }
leptos_axum       = { version = "0.8", optional = true }
axum              = { version = "0.8", optional = true }
tokio             = { version = "1", features = ["rt-multi-thread"], optional = true }
tower             = { version = "0.5", optional = true, features = ["full"] }
tower-http        = { version = "0.6", optional = true, features = ["fs", "cors"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
bcrypt            = { version = "0.16", optional = true }
jsonwebtoken      = { version = "9", optional = true }
sqlx              = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
uuid              = { version = "1", features = ["v4", "serde", "js"] }
chrono            = { version = "0.4", features = ["serde"] }
thiserror         = "2"
wasm-bindgen      = { version = "=0.2.100", optional = true }
web-sys           = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "Storage", "HtmlElement"] }
console_error_panic_hook = { version = "0.1", optional = true }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
http              = "1"
dotenvy           = { version = "0.15", optional = true }
tempfile          = { version = "3", optional = true }


[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:bcrypt",
    "dep:jsonwebtoken",
    "dep:sqlx",
    "dep:tracing-subscriber",
    "dep:dotenvy",
    "dep:tempfile",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
panic = "abort"
